--- a/application/views/admin/menu.html
+++ b/application/views/admin/menu.html
@@ -45,7 +45,7 @@
 				<li class="explode" key="02_cat_and_goods" name="menu"> 商品管理        
 					<ul>
 						 
-						  <li class="menu-item"><a href="index.php?p=admin&c=category&a=index" target="main-frame">商品分类</a></li>
+						  <li class="menu-item"><a href="index.php?p=admin&c=category&a=add" target="main-frame">商品分类</a></li>
 						  <li class="menu-item"><a href="index.php?p=admin&c=brand&a=index" target="main-frame">商品品牌</a></li>
 						  <li class="menu-item"><a href="index.php?p=admin&c=type&a=index" target="main-frame">商品类型</a></li>				
 						  <li class="menu-item"><a href="index.php?p=admin&c=goods&a=add" target="main-frame">添加新商品</a></li>
