--- a/application/views/admin/good_type_edit.html
+++ b/application/views/admin/good_type_edit.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
-  <title>Shop 管理中心-添加分类</title>
+  <title>Shop 管理中心-类型管理</title>
   <meta name="Generator" content="Cocoa HTML Writer">
   <meta name="CocoaVersion" content="1404.34">
   <link rel="stylesheet" type="text/css" href="application/views/admin/styles/main.css">
@@ -13,37 +13,35 @@
 </head>
 <body>
 <h1>
-	<span class="action-span"><a href="index.php?p=admin&c=category&a=index">商品分类</a></span>
-	<span class="action-span1"><a href="index.php?p=admin&c=category&a=index">Shop 管理中心</a></span>
+	<span class="action-span"><a href="index.php?p=admin&c=category&a=index">商品类型</a></span>
+	<span class="action-span1"><a href="index.php?p=admin&c=category&a=index">Shop 管理中心</a></span><span class="action-span1">-商品类型管理</span>
 	<div style="clear:both"></div>
 </h1>
 <div class="main-div">
-	<form action="index.php?p=admin&c=category&a=insert" method="post" name="theform" enctype="multipart/form-data">
+	<form action="index.php?p=admin&c=type&a=save" method="post" name="theform" enctype="multipart/form-data">
 	<table width="100%" id="general-table">
 		<tbody>
 			<tr>
-				<td class="label">分类名称</td>
-				<td><input type="text" name="cat_name" maxlength="20" size="27"><font color="red">*</font> </td>
-			</tr>
-			<tr>
-				<td class="label">上级分类</td>
-				<td>
-					<select name="parent_id">
-						<option value="0">顶级分类</option>
-						<option value="0">次级分类</option>
-						<option value="0">顶级分类</option>
-						<option value="0">顶级分类</option>
-					</select> 
+				<td class="label">商品类型名称</td>
+				<td><input type="text" name="type_name" maxlength="20" size="40">
+					<span class="requir-failed">*</span>
 				</td>
 			</tr>
-			<tr>
-				<td class="label">数量单位</td>
-				<td><input type="text" name="unit"></td>
+			<tr >
+				<td class="label">状态</td>
+				<td>
+					<input type="radio" name="enabled" value="0">&nbsp;禁用&nbsp;
+					<input type="radio" name="enabled" value="0" checked="checked">&nbsp;启用&nbsp;
+				</td>
 			</tr>
-			<tr>
-				<td class="label">排序</td>
-				<td><input type="text" name="sort_order"></td>
+			<tr >
+				<td class="label">属性分组:</td>
+				<td>
+					<textarea name="attr_group" rows="5" cols="40"></textarea>
+					<span class="notice-span" style="display:block">每行一个商品属性组。排序也将按照自然顺序排序。</span>
+				</td>
 			</tr>
+
 			<tr>
 				<td class="label">是否显示</td>
 				<td><input type="radio" name="ishow"></td>
@@ -54,6 +52,7 @@
 	          <textarea name="cat_desc" rows="6" cols="48"></textarea>
 	        </td>
 	      </tr>
+	      
 		</tbody>
 	</table>
 	<div class="button-div">
