--- a/application/views/admin/cat_list.html
+++ b/application/views/admin/cat_list.html
@@ -4,8 +4,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <title>Shop 管理中心-商品分类</title>
-  <link rel="stylesheet" type="text/css" href="application/views/styles/main.css">
-  <link rel="stylesheet" type="text/css" href="application/views/styles/general.css">
+  <link rel="stylesheet" type="text/css" href="application/views/admin/styles/main.css">
+  <link rel="stylesheet" type="text/css" href="application/views/admin/styles/general.css">
   <style type="text/css">
   </style>
 </head>
@@ -17,11 +17,36 @@
 </h1>
 
 <form action="" method="post">
-<table>
-	<tbody>
-		
-	</tbody>
-</table>
+<div class="list-div" id="listDiv">
+  <table width="100%" cellspacing="1" cellpadding="2" id="list-table">
+    <tbody>
+      <tr>
+        <th>分类名称</th>
+        <th>商品数量</th>
+        <th>数量单位</th>
+        <th>是否显示</th>
+        <th>排序</th>
+        <th>操作</th>
+      </tr>
+
+      <tr>
+        <td align="left" class="first-cell"> fuzhuang</td>
+        <td width="10%">0</td>
+        <td width="10%">位</td>
+        <td width="10%">yes</td>
+        <td width="10%" align="right">yes</td>
+        <td width="24%" align="center">
+          <a href="">转移商品</a>
+          <a href="">编辑</a>
+          <a href="">移除</a>
+        </td>
+      </tr>
+
+    </tbody>
+  </table>
+</div>
+
+
 </form>
 </body>
 </html>
