--- a/application/views/admin/brand_list.html
+++ b/application/views/admin/brand_list.html
@@ -50,7 +50,7 @@
 				<a href="index.php?p=admin&c=brand&a=delete&brand_id=<?php echo $brand['brand_id'];?>" onclick="javascript:return confirm('你确认要删除选定的商品品牌吗？')" title="编辑">移除</a> 
 			</td>
 		</tr>
-		<?php endforeach;?>
+	<?php endforeach;?>
 
   </tbody></table>
 
@@ -60,7 +60,7 @@
 
 
 <div id="footer">
-	版权所有 &copy; 2012-2013 传智播客 - PHP培训 - </div>
+	版权所有 &copy; </div>
 </div>
 
 </body>
