--- a/application/views/admin/cat_add.html
+++ b/application/views/admin/cat_add.html
@@ -30,9 +30,10 @@
 				<td>
 					<select name="parent_id">
 						<option value="0">顶级分类</option>
-						<option value="0">次级分类</option>
-						<option value="0">顶级分类</option>
-						<option value="0">顶级分类</option>
+						<?php foreach($cats as $cat ):?>
+						<option value=<?php echo $cat['cat_id'];?>><?php echo str_repeat("&nbsp;",$cat["level"]);?><?php echo $cat["cat_name"];?></option>
+						
+						<?php endforeach;?>
 					</select> 
 				</td>
 			</tr>
