--- a/application/views/admin/cat_list.html
+++ b/application/views/admin/cat_list.html
@@ -28,20 +28,20 @@
         <th>排序</th>
         <th>操作</th>
       </tr>
-
+      <?php foreach ($cats as $cat) :?>
       <tr>
-        <td align="left" class="first-cell"> fuzhuang</td>
-        <td width="10%">0</td>
-        <td width="10%">位</td>
-        <td width="10%">yes</td>
-        <td width="10%" align="right">yes</td>
+        <td align="left" class="first-cell"><?php echo str_repeat("&nbsp;", $cat["level"]);?><?php echo $cat['cat_name'];?></td>
+        <td width="10%" align="center">0</td>
+        <td width="10%" align="center"><?php echo $cat["unit"];?></td>
+        <td width="10%" align="center"><?php echo $cat['is_show']==1 ? "√" : "x";?></td>
+        <td width="10%" align="center"><?php echo $cat["sort_order"];?></td>
         <td width="24%" align="center">
           <a href="">转移商品</a>
-          <a href="">编辑</a>
-          <a href="">移除</a>
+          <a href="index.php?p=admin&c=category&a=edit&cat_id=".$cat['cat_id']>编辑</a>
+          <a href="index.php?p=admin&c=category&a=delete&cat_id=".$cat['cat_id']>移除</a>
         </td>
       </tr>
-
+      <?php endforeach ;?>
     </tbody>
   </table>
 </div>
